Learning/devops-end-to-end-project/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nodejs-deployment
  labels:
    app: nodejs-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nodejs-app

  template:
    metadata:
      labels:
        app: nodejs-app

    spec:
      containers:
      - name: nodejs-container

        image: varshinips/node-app:v1

        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
