Learning/devops-end-to-end-project/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nodejs-service

spec:
  selector:
    app: nodejs-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080

  type: NodePort
